--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
+    "@types/uuid": "^9.0.0",
     "jest": "^29.4.2",
     "nodemon": "^2.0.20",
     "starless-server": "^1.11.9",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "starless-async": "^1.1.2",
-    "starless-http": "^1.0.1"
+    "starless-http": "^1.0.1",
+    "uuid": "^9.0.0"
   }
 }
